[package]
name = "steel-playpen"
version = "0.1.0"
edition = "2024"

[lib]
name = "steel_playpen"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
# steel-core = { version = "0.5.0", features = ["dylibs"] }
steel-core = { git = "https://github.com/mattwparas/steel", branch = "master", features = [
  "dylibs",
] }
sys-info = "0.9.1"
